--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
+    "dependency": "^0.0.1",
     "mongoose": "^8.13.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
