login and client register with new structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,5 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
